--- a/page/main-page.css
+++ b/page/main-page.css
@@ -9,6 +9,8 @@ body
 {
     height: 100%;
     margin: 0;
+    display: flex;
+    flex-direction: column;
     background-color: rgb(28, 28, 28);
 }
 
@@ -25,18 +27,23 @@ a
 
 .content
 {
-    width: 80%;
-    min-width: 1000px;
-    height: 100%;
-    margin: auto;
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: row;
 }
 
-.header
+#header
 {
-    height: 10%;
-    max-height: 75px;
+    height: 40px;
     padding: 10px;
     margin-bottom: 5px;
+    background-color: rgb(28, 28, 28);
+}
+
+#sidebar
+{
+    width: 300px;
+    height: 100%;
 }
 
 .panel
@@ -44,19 +51,64 @@ a
     background-color: rgba(255, 255, 255, 0.05);
 }
 
-.tab-groups
+#tab-groups
 {
     padding: 15px;
+    flex: 1 1 auto;
+    overflow: hidden;
 }
 
 .tab-group
 {
     margin-bottom: 15px;
+    flex: 1 1 auto;
+}
+
+.tab-group-header
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 35px;
+    padding: 5px;
+}
+
+.tab-group-header a
+{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    padding: 0 5px;
+    border-color: transparent;
+    background-color: transparent;
+    font-size: 13px;
+    font-weight: 600;
 }
 
 .tab-group-title
 {
-    padding: 5px;
+    height: min-content;
+    font-size: 20px;
+    font-weight: 600;
+    white-space: nowrap;
+}
+
+.tab-group-header-buttons
+{
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.rename-button
+{
+    color: rgb(210, 210, 210);
+}
+
+.remove-button
+{
+    color: rgb(248, 89, 89);
 }
 
 .tab-group-tabs
@@ -66,7 +118,10 @@ a
 
 .tab
 {
+    position: relative;
+    margin: 3px 0 5px 0;
     padding: 3px;
+    padding-left: 20px;
     display: flex;
     flex-direction: row;
 }
@@ -74,62 +129,41 @@ a
 .tab-drag
 {
     width: 16px;
-    margin-right: 4px;
+    height: 90%;;
+    position: absolute;
+    left: 0;
     background:radial-gradient(rgba(0, 0, 0, 0.3) 50%, transparent 50%) 0 0;
     background-size: 4px 4px;
-}
-
-.tab-side
-{
-    margin: 0 2px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
 .tab-icon
 {
     width: 16px;
     height: 16px;
-    margin: 0;
-}
-
-.tab-checkbox
-{
-    width: 16px;
-    height: 16px;
-    margin: 0;
-	position: relative;
-    -webkit-appearance: none;
-	display: inline-block;
-	background-color: transparent;
-	border: 1px solid #cfcfcf;
-	border-radius: 3px;
-}
-
-.tab-checkbox:checked::after
-{
-	content: '\2714';
-	font-size: 14px;
-	position: absolute;
-	top: -2px;
-	left: 1px;
-	color: #99a1a7;
+    margin: 0 5px 0 0;
+    float: left;
 }
 
 .tab-link
 {
     margin: 0 3px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .tab-title
 {
     font-size: 18px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .tab-url
 {
-    padding-left: 8px;
     font-size: 12px;
     color: rgb(140, 140, 140);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
